[package]
name = "pillow"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "^0.7.6"
cortex-m-rt = "^0.7.1"
alloc-cortex-m = "0.4.3"
panic-halt = "^0.2.0"
libm = "0.2.5"
embedded-hal = "0.2.7"
hd44780-driver = "0.4.0"
keypad2 = "0.1.1"
keypad = "0.2.2"
no-std-compat = {version="0.4.1", features=["alloc"]}

[dependencies.lexical-core]
version = "0.8.5"
default-features = false
features = ["parse-floats", "write-floats"]

[dependencies.stm32f4xx-hal]
features = ["stm32f401", "rt"]
version = "^0.13.2"